# playlist-from-web

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: WEB_UI_IMPLEMENTATION.md
src/app/: __init__.py  cli.py  config.py  llm.py  logging_setup.py  models.py  pdf.py  pipeline.py  spotify_auth.py  spotify_client.py  utils.py
src/app/web/api/: main.py
src/app/web/api/routes/: crawls.py  imports.py  playlists.py  spotify.py
src/app/web/api/services/: data_service.py
src/app/web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/app/web/frontend/src/: App.svelte  app.css
src/app/web/frontend/src/components/: AddTrackForm.svelte  BlockCard.svelte  MissRow.svelte  SpotifyPanel.svelte  SpotifyPlaylistCard.svelte  SpotifySearchModal.svelte  TrackRow.svelte
src/app/web/frontend/src/lib/: api.ts  types.ts
src/app/web/frontend/src/routes/: CrawlDetail.svelte  CrawlList.svelte  Dashboard.svelte  Import.svelte  PlaylistDetail.svelte
tests/: test_cli_smoke.py  test_crawl.py  test_parser_fixture.py  test_pdf.py  test_spotify_search.py  test_web_api.py
tests/fixtures/: hr2_sample.html
