[project]
name = "playlist-from-web"
version = "0.1.0"
description = "LLM-assisted importer: parse web track listings and create Spotify playlists."
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12.5",
    "httpx>=0.27.2",
    "selectolax>=0.3.17",
    "beautifulsoup4>=4.12.3",
    "openai>=1.51.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "pymupdf>=1.26.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=6.0.0",
    "ruff>=0.6.8",
    "mypy>=1.11.2",
    "playwright>=1.57.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "-q"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
